--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,29 @@
-* Ten alle tijden mag er maar één sluisdeur open zijn.
-* Een sluisdeur mag alleen open als de waterniveau aan beiden kanten gelijk is aan elkaar.
-* Sluisdeur mag alleen open als de ricketschuiven gesloten zijn.
+================ Requirements voor sluisdeur =====================
+*** Bij het indrukken van de noodstop dienen alle sluisdeuren 
+    per direct te stoppen met functioneren.
+*** Na het reseten van de noodstop dient de process waarmee
+    de sluisdeuren mee bezig waren te worden hervat.
 
 
-* Bij het indrukken van de noodstop dienen alle sluisdeuren per direct te stoppen met functioneren.
-* Bij het reseten van de noodstop dient de process waarmee de sluisdeuren mee bezig waren te worden
-  afgemaakt.
-    * Ten alle tijden moet de sluisdeur (waarbij de waterniveau aan beiden kanten gelijk is) na het 
-      indrukken van de noodstop naar een open of dichte toestand te worden gebracht.
+================ Requirements voor scheepvaartsein ===============
+*** Bij het indrukken van de noodstop dienen de scheepvaarseinen 
+    aan de buitenkant van de sluis / kolk ten alle tijden uit te 
+    staan / het sein 'buiten gebruik' aan te duiden.
+*** Bij het reseten van de noodstop dienen alle scheepvaartseinen 
+    het sein 'verboden voor doorvaart' aan te duiden.
+*** Tijdens het schutten van een schip dient het gebruikte 
+    scheepvaartseinen ten alle tijden het de volgende drie 
+    fases door te lopen: 
+    'verboden voor doorvaart' -> 'gereedmaken voor doorvaart' -> 
+    'vrij voor doorvaart' -> 'verboden voor doorvaart'.
+*** Ten alle tijden dient bij een gesloten sluisdeur rood licht te 
+    worden afgegeven.
 
 
-* Bij het indrukken van de noodstop dienen de scheepvaarseinen aan de buitenkant van de sluis
-  ten alle tijden het sein 'buiten gebruik' aan te duiden.
-* Bij het indrukken van de noodstop dienen de scheepvaartseinen in de kolk uitgezet te worden.
-* Bij het reseten van de noodstop dienen alle scheepvaartseinen het sein 'verboden voor doorvaart' 
-  aan te duiden.
-* Tijdens het schutten van een schip dient de stoplicht aan een kant ten alle tijden het de volgende drie
-  fases door te lopen: 'verboden voor doorvaart' -> 'gereedmaken voor doorvaart' -> 'vrij voor doorvaart' -> 'verboden voor doorvaart'
-
-
-* Bij gesloten sluisdeuren dienen voor alle scheepvaarsein een rood licht te worden afgegeven
+================ Requirements voor de functionaliteiten ==========
+*** Ten alle tijden mag er maar één sluisdeur open zijn.
+*** Ten alle tijden mag een sluisdeur alleen open als de 
+    waterniveau aan beiden kanten gelijk is.
+*** Ten alle tijden mag een sluisdeur open alleen als de 
+    ricketschuiven gesloten zijn.
+*** 
